correction de quelques pb d'affichage en version mobile

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -10,6 +10,7 @@
 }
 /* Landing Page */
 
+
 body {
   margin: 0;
   display: flex;
@@ -18,6 +19,7 @@ body {
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
+  height : 100%;
   margin: 0 auto;
 }
 
@@ -410,7 +412,6 @@ input[data-error]::after {
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  overflow: hidden;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
 }
@@ -421,7 +422,7 @@ input[data-error]::after {
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
+  width: 100%;
 }
 .hero-content::after {
   content: "";
@@ -437,12 +438,13 @@ input[data-error]::after {
   z-index: 1;
 }
 .hero-headline {
-  font-size: 6rem;
+  font-size: 4.8rem;
   font-weight: normal;
   white-space: nowrap;
+
 }
 .hero-text {
-  width: 146%;
+  width: 100%;
   font-weight: normal;
   margin-top: 57px;
   padding: 0;
@@ -462,6 +464,8 @@ input[data-error]::after {
 }
 .hero-img {
   grid-column: span 8;
+  display: flex;
+  justify-content: center;
 }
 .hero-img img {
   width: 100%;
@@ -493,6 +497,8 @@ footer {
     background: #fff;
     color: #000;
     padding: 20px;
+    text-align: 100%;
+    width: 100%;
   }
   .hero-content::after {
     content: unset;
@@ -501,12 +507,15 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 4rem;
     white-space: normal;
+    line-height : 1.2;
+    text-align: center;
   }
   .hero-text {
-    width: unset;
+    width: 100%;
     font-size: 1.5rem;
+    text-align: center;
   }
   .hero-img img {
     border-radius: 10px;
